Modified to use static profile picture location instead of image url

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <h2>Jason Faustino</h2>
             <h4>mjdlfaustino@gmail.com</h4>
         </div>
-        <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.0-9/90556492_906116166486936_8083697860656234496_o.jpg?_nc_cat=104&_nc_sid=09cbfe&_nc_eui2=AeGeraQ6qjEUDZTOwadE_SL70OzZ7FUez93Q7NnsVR7P3T5oq4TmwlWUNbJAMYx_piJNGIaNQz-pGJ9KaxFEMlB1&_nc_ohc=qftQ7j4ilwYAX8bNEUs&_nc_ht=scontent.fmnl4-1.fna&oh=29bb0a5de7657440fdc3f3e4d9ca158b&oe=5F21F555" alt="profile picture">
+        <img src="../../../../assets/sample_profile.jpg" alt="profile picture">
     </div>
 
     <!-- This is material divider (underline) -->
