Fixed image location bug

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <h2>Jason Faustino</h2>
             <h4>mjdlfaustino@gmail.com</h4>
         </div>
-        <img src="../../../../assets/sample_profile.jpg" alt="profile picture">
+        <img src="../../../../assets/images/sample_profile.jpg" alt="profile picture">
     </div>
 
     <!-- This is material divider (underline) -->
